CHANGELOG

====================================================
0.6.1-beta

BackEnd:
- LogError accepts argument to create a new failure
- Async calls refactored
- Moved some hardcoded variables to a config file

====================================================
0.6.0-beta

BackEnd:
- Cover are now declined in different sizes when fetch
- Automatic cover updates
- Turned DAO/Access/Service into singleton class
- Added cover cleaner cleaning dead files and dead images

FrontEnd:
- Cover are fetched with optimal size to reduce bandwith consumption and loading time

====================================================
0.5.0-beta

BackEnd:
- Changed the failable system
- Added validation for null id in API
- Changed worker system to a task manager system
- Added metadata grabber task with auto refresh
- Added cover grabber task

====================================================
0.4.1-beta

BackEnd:
- Optimised song collector reduce database calls

====================================================
0.4.0-beta

FrontEnd:
- Optimised research
- Patched a bug in song duration parsing
- Cover are now lazily fetched to reduce number of call to the back
- Refactored front code base

BackEnd:
- Implemented a exception system

====================================================
0.3.2-beta

BackEnd:
- Patched a bug in songCollector that keeped recreating albums and artists rather than using already existing ones

====================================================
0.3.1-beta

FrontEnd:
- Changed overflow behavior of album list in artist presentations

BackEnd:
- Refactored the code base

====================================================
0.3.0-beta

FrontEnd:
- Resized album and artist items to avoid horizontal clipping of names
- Change display settings of too large and too little cover to avoid overflowing
- Hid useless scrollbars
- Changed artist image placeholder to a mosaic of album
- Fixed the logo overflowing
- Changed like button behavior