@@ -1,0 +1,4 @@
+export interface imageFileData {
+    data: string;
+    extension: string;
+  }
