@@ -7,6 +7,7 @@ BackEnd:
 - LogError accepts argument to create a new failure
 - Async calls refactored
 - Moved some hardcoded variables to a config file
+- Moved ImageFileData DTO to a file
 
 ====================================================
 0.6.0-beta
